--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap');
+
+
+
+
 
 
 /* Animasjon for blinking */
@@ -21,6 +26,16 @@
     .arcade-screen-glow {
         box-shadow: inset 0 0 20px rgba(0, 242, 255, 0.5), 0 0 15px rgba(0, 242, 255, 0.3);
     }
+
+    /* Slik at ikke tailwind overkjører fonten der den brukes */
+    .font-fredoka {
+        font-family: 'Fredoka', sans-serif;
+    }
+
+    .font-montserrat {
+        font-family: 'Montserrat', sans-serif;
+    }
+
 
     /* Bakgrunnsmønster, Bricks */
     .brick-pattern {
@@ -55,15 +70,6 @@
     z-index: 10;
     }
 
-
-    /* Sjakkmønsteret */
-     .checkerboard-pattern {
-    background-color: #ffffff; 
-    background-image: 
-   conic-gradient(#066DA7 90deg, transparent 90deg 180deg, #066DA7 180deg 270deg, transparent 270deg);
-  background-size: 130px 130px; /* Her styrer du størrelsen på rutene */
-  background-position: center;
-}
 }
 
 body{
